--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 ##########################################
 # 站点配置
 
-baseURL = "https://Zhou-Shangjie.github.io/my_blog"
+baseURL = "https://Zhou-Shangjie.me"
 title = "周尚节的博客"
 languageCode = "zh-CN"
 hasCJKLanguage = true
