--- a/config.toml
+++ b/config.toml
@@ -1415,14 +1415,14 @@ uglyURLs = false
         host = "https://cdn.jsdelivr.net"
         # 说明：设置为根（"/"）且将下方对应 path
         #      设置，如果你想要直接从「本地」
-        #      加载某个库的话。比如：
+        #      加载某个库的话。比如："/npm/gitalk@1/dist/gitalk.css"
         #      将 path 设置为 "js/lib.min.js"，
         #      并将文件放到你的 /static/js/lib.min.js
     [params.lib.path]
         clipboard = "/npm/clipboard-polyfill@2.8.6/dist/clipboard-polyfill.min.js"
         instantsearch = "/npm/instantsearch.js@2/dist/instantsearch.min.js"
         gitalk = "/npm/gitalk@1/dist/gitalk.min.js"
-        gitalk_css = "/npm/gitalk@1/dist/gitalk.css"
+        gitalk_css = "https://gitee.com/qwding/my-blog/blob/master/docs/.vuepress/styles/gitalk.css"
         instantpage = "/npm/instant.page@5.1.0/instantpage.min.js"
         katex = "/npm/katex@0.13.0/dist/katex.min.js"
         katex_css = "/npm/katex@0.13.0/dist/katex.min.css"
