--- a/config.toml
+++ b/config.toml
@@ -638,7 +638,7 @@ uglyURLs = false
     # 说明：https://utteranc.es/
 
     ## Gitalk
-    enableGitalk = false
+    enableGitalk = true
     gitalkClientID = "f54259fe6d64b6a7eb82"
     gitalkClientSecret = "b77c7475c06d697b8b516e918da0e15c9fff36e0"
     gitalkRepo = "my_blog"
@@ -679,8 +679,6 @@ uglyURLs = false
     gitalkEnableHotKey = true
     # 说明：https://github.com/gitalk/gitalk
 
-    ## Gisgus
-    enableGiscus = true
 
     ######################################
     # Google Analytics
@@ -1417,14 +1415,14 @@ uglyURLs = false
         host = "https://cdn.jsdelivr.net"
         # 说明：设置为根（"/"）且将下方对应 path
         #      设置，如果你想要直接从「本地」
-        #      加载某个库的话。比如："/npm/gitalk@1/dist/gitalk.css"
+        #      加载某个库的话。比如
         #      将 path 设置为 "js/lib.min.js"，
         #      并将文件放到你的 /static/js/lib.min.js
     [params.lib.path]
         clipboard = "/npm/clipboard-polyfill@2.8.6/dist/clipboard-polyfill.min.js"
         instantsearch = "/npm/instantsearch.js@2/dist/instantsearch.min.js"
         gitalk = "/npm/gitalk@1/dist/gitalk.min.js"
-        gitalk_css = "/npm/gitalk@1/dist/gitalk.css"
+        gitalk_css = "gitalk.css"
         instantpage = "/npm/instant.page@5.1.0/instantpage.min.js"
         katex = "/npm/katex@0.13.0/dist/katex.min.js"
         katex_css = "/npm/katex@0.13.0/dist/katex.min.css"
