--- a/config.toml
+++ b/config.toml
@@ -649,7 +649,7 @@ uglyURLs = false
     # 2. pathname (`location.pathname`)
     # 3. hash (hash_filepath)
     # 4. custom:your_gitalk_id ("your_gitalk_id")
-    gitalkID = "pathname"
+    gitalkID = "hash"
 
     gitalkNumber = -1
     gitalkLables = ["Gitalk"]
